--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
   <main class="wrapper">
     <header class="header">
       <h1 class="header-title">
-        Reliable, efficient delivery<span>Powered by Technology</span></h1>
+        Reliable, efficient delivery<br><span>Powered by Technology</span></h1>
       <p class="header-sub-title">
         Our Artificial Intelligence powered tools use millions of project data points
         to ensure that your project is successful</p>
       </header>
     <div class="grid">
       <div class="box1">
-        <h3 class="heading">Supervisor</h3>
+        <h3 class="heading-title">Supervisor</h3>
         <p class="heading-sub-title">Monitors activity to identify project roadblocks</p>
         <img src="/images/icon-supervisor.svg" alt="icon-supervisor">
       </div>
       <div class="box2">
-        <h3 class="heading">Team Builder</h3>
+        <h3 class="heading-title">Team Builder</h3>
         <p class="heading-sub-title">Scans our talent network to create the optimal team for your project</p>
         <img src="/images/icon-team-builder.svg" alt="icon-team-builder">
       </div>
       <div class="box3">
-        <h3 class="heading">Karma</h3>
+        <h3 class="heading-title">Karma</h3>
         <p class="heading-sub-title">Regularly evaluates our talent to ensure quality</p>
         <img src="/images/icon-karma.svg" alt="icon-karma">
       </div>
       <div class="box4">
-        <h3 class="heading">Calculator</h3>
+        <h3 class="heading-title">Calculator</h3>
         <p class="heading-sub-title">Uses data from past projects to provide better delivery estimates</p>
         <img src="/images/icon-calculator.svg" alt="icon-calculator">
       </div>
